--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row text-center">
             <img src="img/mob-app-chart.png">
         </div>
-        <p class="text-center"><a class="btn btn-custom btn-large" href="#">See It In Action</a></p>
+        <p class="text-center"><a class="btn btn-custom btn-large" href="http://go.localytics.com/demo">See It In Action</a></p>
         <div class="row text-center">
             <p>The demo offers full access to our complete product suite and doesn't require payment information.</p>
         </div>
